--- a/Flipped/Base.lproj/Main.storyboard
+++ b/Flipped/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -31,11 +32,21 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OmX-tt-wcw">
+                                <rect key="frame" x="155.5" y="464" width="64" height="54"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                <state key="normal" title="Play"/>
+                                <connections>
+                                    <segue destination="buO-78-haS" kind="show" id="iG4-70-Lec"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="KQZ-1w-vlD" secondAttribute="centerX" id="6BV-lF-sBN"/>
+                            <constraint firstItem="OmX-tt-wcw" firstAttribute="top" secondItem="A5M-7J-77L" secondAttribute="bottom" constant="84" id="ae7-M9-yqH"/>
                             <constraint firstItem="A5M-7J-77L" firstAttribute="top" secondItem="KQZ-1w-vlD" secondAttribute="bottom" constant="8" symbolic="YES" id="cfb-er-3JN"/>
+                            <constraint firstItem="OmX-tt-wcw" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="dKG-PX-1Lk"/>
                             <constraint firstItem="A5M-7J-77L" firstAttribute="centerX" secondItem="KQZ-1w-vlD" secondAttribute="centerX" id="e1l-AV-tCB"/>
                             <constraint firstAttribute="centerY" secondItem="KQZ-1w-vlD" secondAttribute="centerY" id="exm-UA-ej4"/>
                         </constraints>
@@ -47,6 +58,56 @@
             </objects>
             <point key="canvasLocation" x="750" y="-320"/>
         </scene>
+        <!--Game View Controller-->
+        <scene sceneID="vYj-Q9-eck">
+            <objects>
+                <viewController id="buO-78-haS" customClass="GameViewController" customModule="Flipped" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="RPU-WH-eM5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NaZ-Xm-2MC">
+                                <rect key="frame" x="160.5" y="597" width="54" height="30"/>
+                                <state key="normal" title="Dismiss"/>
+                                <connections>
+                                    <action selector="dismissScreen:" destination="buO-78-haS" eventType="touchUpInside" id="4QT-MG-bh2"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jg6-HE-XxC" customClass="GameView" customModule="Flipped" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="146" width="375" height="375"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="jg6-HE-XxC" secondAttribute="height" multiplier="1:1" id="crV-sG-MqI"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CUw-8S-4Kn">
+                                <rect key="frame" x="106" y="91" width="163" height="30"/>
+                                <state key="normal" title="Draw Something Maybe"/>
+                                <connections>
+                                    <action selector="drawSomethingMaybe:" destination="buO-78-haS" eventType="touchUpInside" id="maf-zf-0K9"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="jg6-HE-XxC" firstAttribute="leading" secondItem="rCi-2o-jXN" secondAttribute="leading" id="EZX-PQ-Wy8"/>
+                            <constraint firstItem="NaZ-Xm-2MC" firstAttribute="centerX" secondItem="RPU-WH-eM5" secondAttribute="centerX" id="NWw-EF-NnF"/>
+                            <constraint firstItem="jg6-HE-XxC" firstAttribute="top" secondItem="CUw-8S-4Kn" secondAttribute="bottom" constant="25" id="Qkx-2U-Hwg"/>
+                            <constraint firstItem="rCi-2o-jXN" firstAttribute="bottom" secondItem="NaZ-Xm-2MC" secondAttribute="bottom" constant="40" id="RZo-6d-xEJ"/>
+                            <constraint firstItem="rCi-2o-jXN" firstAttribute="trailing" secondItem="jg6-HE-XxC" secondAttribute="trailing" id="Wbc-Ie-AN3"/>
+                            <constraint firstItem="CUw-8S-4Kn" firstAttribute="centerX" secondItem="RPU-WH-eM5" secondAttribute="centerX" id="idP-Om-ReK"/>
+                            <constraint firstItem="jg6-HE-XxC" firstAttribute="centerY" secondItem="RPU-WH-eM5" secondAttribute="centerY" id="pg9-nr-rVY"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="rCi-2o-jXN"/>
+                    </view>
+                    <connections>
+                        <outlet property="gameView" destination="jg6-HE-XxC" id="A0p-d4-v2b"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fJv-II-8qe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1530" y="-321"/>
+        </scene>
         <!--Settings-->
         <scene sceneID="Yah-ZE-V4K">
             <objects>
@@ -56,16 +117,24 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zl3-9r-3s6">
-                                <rect key="frame" x="130.5" y="50" width="114" height="39"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <rect key="frame" x="123.5" y="312" width="128" height="43"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="If I ever actually do anything it will go here" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ol1-xx-YaQ">
+                                <rect key="frame" x="52" y="355" width="271" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Zl3-9r-3s6" firstAttribute="top" secondItem="TF0-pB-Dz8" secondAttribute="top" constant="30" id="Umf-Wl-BxW"/>
+                            <constraint firstItem="Zl3-9r-3s6" firstAttribute="centerY" secondItem="gft-BV-NTR" secondAttribute="centerY" id="0cJ-dW-ewX"/>
+                            <constraint firstItem="ol1-xx-YaQ" firstAttribute="top" secondItem="Zl3-9r-3s6" secondAttribute="bottom" id="H5b-AS-ZES"/>
                             <constraint firstItem="Zl3-9r-3s6" firstAttribute="centerX" secondItem="gft-BV-NTR" secondAttribute="centerX" id="pQa-b0-Ia5"/>
+                            <constraint firstItem="ol1-xx-YaQ" firstAttribute="centerX" secondItem="gft-BV-NTR" secondAttribute="centerX" id="zh3-F9-oPW"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="TF0-pB-Dz8"/>
                     </view>
@@ -73,7 +142,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I0U-N0-09o" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1" y="769"/>
+            <point key="canvasLocation" x="-1" y="743"/>
         </scene>
         <!--Second-->
         <scene sceneID="wg7-f3-ORb">
