--- a/Flipped/Base.lproj/Main.storyboard
+++ b/Flipped/Base.lproj/Main.storyboard
@@ -6,12 +6,11 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--First-->
+        <!--Start-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
                 <viewController id="9pv-A4-QxB" customClass="StartViewController" customModule="Flipped" customModuleProvider="target" sceneMemberID="viewController">
@@ -52,7 +51,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="First" image="first" id="acW-dT-cKf"/>
+                    <tabBarItem key="tabBarItem" title="Start" image="home-7" selectedImage="home-7" id="acW-dT-cKf"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
@@ -66,22 +65,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jg6-HE-XxC" customClass="GameView" customModule="Flipped" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NaZ-Xm-2MC">
-                                <rect key="frame" x="160.5" y="597" width="54" height="30"/>
+                                <rect key="frame" x="160" y="597" width="54" height="30"/>
                                 <state key="normal" title="Dismiss"/>
                                 <connections>
                                     <action selector="dismissScreen:" destination="buO-78-haS" eventType="touchUpInside" id="4QT-MG-bh2"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jg6-HE-XxC" customClass="GameView" customModule="Flipped" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="146" width="375" height="375"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="jg6-HE-XxC" secondAttribute="height" multiplier="1:1" id="crV-sG-MqI"/>
-                                </constraints>
-                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CUw-8S-4Kn">
-                                <rect key="frame" x="106" y="91" width="163" height="30"/>
+                                <rect key="frame" x="106" y="95" width="163" height="30"/>
                                 <state key="normal" title="Draw Something Maybe"/>
                                 <connections>
                                     <action selector="drawSomethingMaybe:" destination="buO-78-haS" eventType="touchUpInside" id="maf-zf-0K9"/>
@@ -90,13 +86,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="jg6-HE-XxC" firstAttribute="top" secondItem="rCi-2o-jXN" secondAttribute="top" id="BJT-Ah-LDu"/>
                             <constraint firstItem="jg6-HE-XxC" firstAttribute="leading" secondItem="rCi-2o-jXN" secondAttribute="leading" id="EZX-PQ-Wy8"/>
                             <constraint firstItem="NaZ-Xm-2MC" firstAttribute="centerX" secondItem="RPU-WH-eM5" secondAttribute="centerX" id="NWw-EF-NnF"/>
-                            <constraint firstItem="jg6-HE-XxC" firstAttribute="top" secondItem="CUw-8S-4Kn" secondAttribute="bottom" constant="25" id="Qkx-2U-Hwg"/>
                             <constraint firstItem="rCi-2o-jXN" firstAttribute="bottom" secondItem="NaZ-Xm-2MC" secondAttribute="bottom" constant="40" id="RZo-6d-xEJ"/>
                             <constraint firstItem="rCi-2o-jXN" firstAttribute="trailing" secondItem="jg6-HE-XxC" secondAttribute="trailing" id="Wbc-Ie-AN3"/>
+                            <constraint firstAttribute="bottom" secondItem="jg6-HE-XxC" secondAttribute="bottom" id="fti-kD-Hjz"/>
                             <constraint firstItem="CUw-8S-4Kn" firstAttribute="centerX" secondItem="RPU-WH-eM5" secondAttribute="centerX" id="idP-Om-ReK"/>
-                            <constraint firstItem="jg6-HE-XxC" firstAttribute="centerY" secondItem="RPU-WH-eM5" secondAttribute="centerY" id="pg9-nr-rVY"/>
+                            <constraint firstItem="CUw-8S-4Kn" firstAttribute="top" secondItem="rCi-2o-jXN" secondAttribute="top" constant="75" id="qik-yX-FNR"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="rCi-2o-jXN"/>
                     </view>
@@ -106,7 +103,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fJv-II-8qe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1530" y="-321"/>
+            <point key="canvasLocation" x="1528.8" y="-321.58920539730138"/>
         </scene>
         <!--Settings-->
         <scene sceneID="Yah-ZE-V4K">
@@ -138,13 +135,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="TF0-pB-Dz8"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Settings" image="second" selectedImage="second" id="Vwa-nF-xtG"/>
+                    <tabBarItem key="tabBarItem" title="Settings" image="settings" selectedImage="settings" id="Vwa-nF-xtG"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I0U-N0-09o" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1" y="743"/>
         </scene>
-        <!--Second-->
+        <!--Levels-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
                 <viewController id="8rJ-Kc-sve" customClass="LevelSelectViewController" customModule="Flipped" customModuleProvider="target" sceneMemberID="viewController">
@@ -175,7 +172,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Second" image="second" id="cPa-gy-q4n"/>
+                    <tabBarItem key="tabBarItem" title="Levels" image="level_select" selectedImage="level_select" id="cPa-gy-q4n"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
@@ -202,7 +199,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="first" width="30" height="30"/>
-        <image name="second" width="30" height="30"/>
+        <image name="home-7" width="30" height="30"/>
+        <image name="level_select" width="30" height="30"/>
+        <image name="settings" width="30" height="30"/>
     </resources>
 </document>
