--- a/Flipped/Base.lproj/Main.storyboard
+++ b/Flipped/Base.lproj/Main.storyboard
@@ -52,37 +52,46 @@
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Start" image="home-7" selectedImage="home-7" id="acW-dT-cKf"/>
+                    <navigationItem key="navigationItem" id="vk1-iK-qyK"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="750" y="-320"/>
+            <point key="canvasLocation" x="1561" y="-322"/>
+        </scene>
+        <!--Start-->
+        <scene sceneID="PcG-lh-A4u">
+            <objects>
+                <navigationController id="zur-00-JBG" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Start" image="home-7" selectedImage="home-7" id="QbA-CE-dSc"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="jSg-zi-sXE">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="9pv-A4-QxB" kind="relationship" relationship="rootViewController" id="Zim-VV-mT5"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nc6-ev-uoN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="750" y="-322"/>
         </scene>
         <!--Game View Controller-->
         <scene sceneID="vYj-Q9-eck">
             <objects>
-                <viewController id="buO-78-haS" customClass="GameViewController" customModule="Flipped" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController hidesBottomBarWhenPushed="YES" id="buO-78-haS" customClass="GameViewController" customModule="Flipped" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="RPU-WH-eM5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jg6-HE-XxC" customClass="GameView" customModule="Flipped" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NaZ-Xm-2MC">
-                                <rect key="frame" x="160" y="597" width="54" height="30"/>
-                                <state key="normal" title="Dismiss"/>
-                                <connections>
-                                    <action selector="dismissScreen:" destination="buO-78-haS" eventType="touchUpInside" id="4QT-MG-bh2"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="jg6-HE-XxC" firstAttribute="top" secondItem="rCi-2o-jXN" secondAttribute="top" id="BJT-Ah-LDu"/>
                             <constraint firstItem="jg6-HE-XxC" firstAttribute="leading" secondItem="rCi-2o-jXN" secondAttribute="leading" id="EZX-PQ-Wy8"/>
-                            <constraint firstItem="NaZ-Xm-2MC" firstAttribute="centerX" secondItem="RPU-WH-eM5" secondAttribute="centerX" id="NWw-EF-NnF"/>
-                            <constraint firstItem="rCi-2o-jXN" firstAttribute="bottom" secondItem="NaZ-Xm-2MC" secondAttribute="bottom" constant="40" id="RZo-6d-xEJ"/>
                             <constraint firstItem="rCi-2o-jXN" firstAttribute="trailing" secondItem="jg6-HE-XxC" secondAttribute="trailing" id="Wbc-Ie-AN3"/>
                             <constraint firstAttribute="bottom" secondItem="jg6-HE-XxC" secondAttribute="bottom" id="fti-kD-Hjz"/>
                         </constraints>
@@ -94,7 +103,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fJv-II-8qe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1528.8" y="-321.58920539730138"/>
+            <point key="canvasLocation" x="2398" y="-322"/>
         </scene>
         <!--Settings-->
         <scene sceneID="Yah-ZE-V4K">
@@ -179,7 +188,7 @@
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
+                        <segue destination="zur-00-JBG" kind="relationship" relationship="viewControllers" id="k79-7y-VBM"/>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
                         <segue destination="zcm-Xb-MiX" kind="relationship" relationship="viewControllers" id="G1w-CP-ObT"/>
                     </connections>
