final commit before turning in project.

--- a/Flipped/Base.lproj/Main.storyboard
+++ b/Flipped/Base.lproj/Main.storyboard
@@ -19,21 +19,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Start" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="KQZ-1w-vlD">
-                                <rect key="frame" x="150.5" y="312" width="74" height="43"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loaded by FirstViewController" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A5M-7J-77L">
-                                <rect key="frame" x="90" y="363" width="194.5" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OmX-tt-wcw">
-                                <rect key="frame" x="155.5" y="464" width="64" height="54"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="flipped_logo" translatesAutoresizingMaskIntoConstraints="NO" id="ijm-4E-b6n">
+                                <rect key="frame" x="0.0" y="64" width="375" height="450"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="752" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OmX-tt-wcw">
+                                <rect key="frame" x="155.5" y="514" width="64" height="54"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                 <state key="normal" title="Play"/>
                                 <connections>
@@ -43,12 +33,12 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="KQZ-1w-vlD" secondAttribute="centerX" id="6BV-lF-sBN"/>
-                            <constraint firstItem="OmX-tt-wcw" firstAttribute="top" secondItem="A5M-7J-77L" secondAttribute="bottom" constant="84" id="ae7-M9-yqH"/>
-                            <constraint firstItem="A5M-7J-77L" firstAttribute="top" secondItem="KQZ-1w-vlD" secondAttribute="bottom" constant="8" symbolic="YES" id="cfb-er-3JN"/>
+                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="bottom" secondItem="OmX-tt-wcw" secondAttribute="bottom" constant="50" id="3s6-vB-YnB"/>
+                            <constraint firstItem="ijm-4E-b6n" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" id="cKc-KV-9oM"/>
+                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="ijm-4E-b6n" secondAttribute="trailing" id="cpx-o3-IEM"/>
                             <constraint firstItem="OmX-tt-wcw" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="dKG-PX-1Lk"/>
-                            <constraint firstItem="A5M-7J-77L" firstAttribute="centerX" secondItem="KQZ-1w-vlD" secondAttribute="centerX" id="e1l-AV-tCB"/>
-                            <constraint firstAttribute="centerY" secondItem="KQZ-1w-vlD" secondAttribute="centerY" id="exm-UA-ej4"/>
+                            <constraint firstItem="OmX-tt-wcw" firstAttribute="top" secondItem="ijm-4E-b6n" secondAttribute="bottom" id="ddb-VM-kre"/>
+                            <constraint firstItem="ijm-4E-b6n" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" id="yJm-AM-ImB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
@@ -57,7 +47,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1561" y="-322"/>
+            <point key="canvasLocation" x="1560.8" y="-322.48875562218893"/>
         </scene>
         <!--Start-->
         <scene sceneID="PcG-lh-A4u">
@@ -299,6 +289,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="flipped_logo" width="2048" height="2048"/>
         <image name="home-7" width="30" height="30"/>
         <image name="level_select" width="30" height="30"/>
         <image name="settings" width="30" height="30"/>
